--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "add": "^2.0.6",
+    "better-react-spinkit": "^2.0.4",
+    "email-validator": "^2.0.4",
+    "firebase": "^8.3.1",
     "next": "10.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.2.1"
+    "react-firebase-hooks": "^3.0.3",
+    "styled-components": "^5.2.1",
+    "yarn": "^1.22.10"
   }
 }
